Primera pueba de commit

--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -22,7 +22,7 @@
         <p>Esta es mi nueva página con HTML5</p>
         <aside>
             <h2>Sobre mí</h2>
-            <p>Soy un músico profesional de New Orleans.</p>
+            <p>Soy un estudiante de ingenieria.</p>
         </aside>
     </main>
 
