--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang = "es">
 
 <head>
     <title>Pagina principal</title>
@@ -9,21 +9,75 @@
     <header>
         <nav>
             <ul>
-                <li>Inicio</li>
-                <li>Blog</li>
-                <li>Contacto</li>
+                <li><a href="contacto.html">Inicio</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <hr/>
-        <h1>Bienvenido a mi página</h1>
-        <p>Esta es mi nueva página con HTML5</p>
-        <aside>
-            <h2>Sobre mí</h2>
-            <p>Soy un estudiante de ingenieria.</p>
-        </aside>
+        <section>
+            <h2>Historia de la empresa</h2>
+            <div class="historia">
+                <article class="producto">
+                    <img src="img/producto1.jpg"
+                        alt="Imagen del producto 1">
+                    <div class="info-producto">
+                        <h3>Producto1</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur
+                            adipisicing elit. Reiciendis ab, consequuntur
+                            voluptas quod ex nihil unde nesciunt. Eligendi
+                            itaque nam dolorum, distinctio quis saepe
+                            dolorem doloribus ipsa iste tenetur sunt.</p>
+                        <p class="precio">595€</p>
+                        <a href="#" class="btn"> Agregar al carrito </a>
+                    </div>
+                </article>
+                <article class="producto">
+                    <img src="img/producto2.jpg"
+                        alt="Imagen del producto 2">
+                    <div class="info-producto">
+                        <h3>Producto2</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur
+                            adipisicing elit. Reiciendis ab, consequuntur
+                            voluptas quod ex nihil unde nesciunt. Eligendi
+                            itaque nam dolorum, distinctio quis saepe
+                            dolorem doloribus ipsa iste tenetur sunt.</p>
+                        <p class="precio">595€</p>
+                        <a href="#" class="btn"> Agregar al carrito </a>
+                    </div>
+                </article>
+                <article class="producto">
+                    <img src="img/producto3.jpg"
+                        alt="Imagen del producto 3">
+                    <div class="info-producto">
+                        <h3>Producto3</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur
+                            adipisicing elit. Reiciendis ab, consequuntur
+                            voluptas quod ex nihil unde nesciunt. Eligendi
+                            itaque nam dolorum, distinctio quis saepe
+                            dolorem doloribus ipsa iste tenetur sunt.</p>
+                        <p class="precio">595€</p>
+                        <a href="#" class="btn"> Agregar al carrito </a>
+                    </div>
+                </article>
+                <article class="producto">
+                    <img src="img/producto4.jpg"
+                        alt="Imagen del producto 4">
+                    <div class="info-producto">
+                        <h3>Producto4</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur
+                            adipisicing elit. Reiciendis ab, consequuntur
+                            voluptas quod ex nihil unde nesciunt. Eligendi
+                            itaque nam dolorum, distinctio quis saepe
+                            dolorem doloribus ipsa iste tenetur sunt.</p>
+                        <p class="precio">595€</p>
+                        <a href="#" class="btn"> Agregar al carrito </a>
+                    </div>
+                </article>
+            </div>
+        </section>
     </main>
 
     <footer>
