Actualizaciones pagina principal

--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -20,7 +20,7 @@
         <section>
             <h2>Historia de la empresa</h2>
             <div class="historia">
-                <article class="producto">
+                <article class="introduccion">
                     <img src="img/producto1.jpg"
                         alt="Imagen del producto 1">
                     <div class="info-producto">
@@ -48,47 +48,30 @@
                         <a href="#" class="btn"> Agregar al carrito </a>
                     </div>
                 </article>
-                <article class="producto">
-                    <img src="img/producto3.jpg"
-                        alt="Imagen del producto 3">
-                    <div class="info-producto">
-                        <h3>Producto3</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur
-                            adipisicing elit. Reiciendis ab, consequuntur
-                            voluptas quod ex nihil unde nesciunt. Eligendi
-                            itaque nam dolorum, distinctio quis saepe
-                            dolorem doloribus ipsa iste tenetur sunt.</p>
-                        <p class="precio">595€</p>
-                        <a href="#" class="btn"> Agregar al carrito </a>
-                    </div>
-                </article>
-                <article class="producto">
-                    <img src="img/producto4.jpg"
-                        alt="Imagen del producto 4">
-                    <div class="info-producto">
-                        <h3>Producto4</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur
-                            adipisicing elit. Reiciendis ab, consequuntur
-                            voluptas quod ex nihil unde nesciunt. Eligendi
-                            itaque nam dolorum, distinctio quis saepe
-                            dolorem doloribus ipsa iste tenetur sunt.</p>
-                        <p class="precio">595€</p>
-                        <a href="#" class="btn"> Agregar al carrito </a>
-                    </div>
-                </article>
             </div>
         </section>
     </main>
 
     <footer>
-        <nav>
-            <ul>
-                <li>Inicio</li>
-                <li>Blog</li>
-                <li>Contacto</li>
-            </ul>
-        </nav>
-        <p>Copyright 2024 Jon Tolosa</p>
+        <div class="footer-flex contenedor">
+            <div class="footer-navegacion">
+                <h3>Redes-Sociales</h3>
+                <nav class="navegacion">
+                    <a class="enlace" href="#">Instagram</a>
+                    <a href="#">Facebook</a>
+                    <a href="#">Youtube</a>
+                    <a href="#">TikTok</a>
+                </nav>
+            </div>
+            <div class="footer-navegacion">
+                <h3>Soporte</h3>
+                <nav>
+                    <a href="#">Preguntas frecuentes</a>
+                    <a href="#">Ayuda en línea</a>
+                    <a href="#">Confianza y seguridad</a>
+                </nav>
+            </div>
+        </div>
     </footer>
        
 </body>
