--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -9,7 +9,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="contacto.html">Inicio</a></li>
+                <li><a href="pagina_principal.html">Inicio</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
@@ -18,13 +18,14 @@
 
     <main>
         <section>
-            <h2>Historia de la empresa</h2>
+            <h2>SMC Corporation</h2>
+            <h3>Historia de la empresa</h3>
             <div class="historia">
                 <article class="introduccion">
                     <img src="img/producto1.jpg"
                         alt="Imagen del producto 1">
                     <div class="info-producto">
-                        <h3>Producto1</h3>
+                        <h3>Introduccion</h3>
                         <p>Lorem ipsum dolor sit, amet consectetur
                             adipisicing elit. Reiciendis ab, consequuntur
                             voluptas quod ex nihil unde nesciunt. Eligendi
@@ -38,7 +39,7 @@
                     <img src="img/producto2.jpg"
                         alt="Imagen del producto 2">
                     <div class="info-producto">
-                        <h3>Producto2</h3>
+                        <h3>De donde venimos</h3>
                         <p>Lorem ipsum dolor sit, amet consectetur
                             adipisicing elit. Reiciendis ab, consequuntur
                             voluptas quod ex nihil unde nesciunt. Eligendi
@@ -49,6 +50,22 @@
                     </div>
                 </article>
             </div>
+        </section>
+        <section>
+            <nav>
+                <ul>
+                    <li>Fila 1</li>
+                    <li>Fila 2</li>
+                    <li>Fila 3</li>
+                </ul>
+            </nav> 
+            <nav>
+                <ol>
+                    <li>Fila 1</li>
+                    <li>Fila 2</li>
+                    <li>Fila 3</li>
+                </ol>
+            </nav>            
         </section>
     </main>
 
