--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -3,10 +3,12 @@
 
 <head>
     <title>Pagina principal</title>
+    <link rel="stylesheet" href="css/app.css">
 </head>
 
 <body>
     <header>
+        <div class="indice">  
         <nav>
             <ul>
                 <li><a href="pagina_principal.html">Inicio</a></li>
@@ -14,6 +16,7 @@
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
+        </div>
     </header>
 
     <main>
