--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -4,14 +4,13 @@
 <head>
     <title>Pagina principal</title>
     <link rel="stylesheet" href="css/app.css">
-    <link rel="img" href="img">
 </head>
 
 <body>
     <header>
         <div class="indice">
 
-            <img src="logo.png" alt="Logo de la empresa">
+            <img src="img/logo.png" alt="Logo de la empresa" class="img_logo">
 
             <nav class="barra_navegacion">
                 <a href="pagina_principal.html">Inicio</a>
