--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -140,28 +140,32 @@
             <div class="footer-navegacion">
                 <div class="ubicacion">
                     <h3 id="dondeestamos">¿Donde estamos?</h3>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5851.089204991532!2d-2.729134379353474!3d42.840242768184076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4fc1dac528f6dd%3A0xfc2662223fb0ecf1!2sSMC%20Espa%C3%B1a!5e0!3m2!1ses!2ses!4v1710347394718!5m2!1ses!2ses" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="mapa"></iframe>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5851.089204991532!2d-2.729134379353474!3d42.840242768184076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4fc1dac528f6dd%3A0xfc2662223fb0ecf1!2sSMC%20Espa%C3%B1a!5e0!3m2!1ses!2ses!4v1710347394718!5m2!1ses!2ses"
+                        width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade" id="mapa"></iframe>
                 </div>
             </div>
-            <div class="footer-navegacion">
-                <div class="footer-navegacion">
+
+            <nav class="navegacion">
+                <ul class="soporte">
                     <h3>Soporte y Ayuda</h3>
-                    <nav class="navegacion">
-                        <ul class="soporte">
-                            <li><a href="#">Empresa y Soporte</a></li>
-                            <li><a href="#">Ayuda en línea</a></li>
-                            <li><a href="#">Confianza y seguridad</a></li>
-                        </ul>
-                        <h3>Redes Sociales</h3>
-                        <ul class="redes-sociales">
-                            <li><a href="#">Instagram</a></li>
-                            <li><a href="#">Facebook</a></li>
-                            <li><a href="#">Youtube</a></li>
-                            <li><a href="#">TikTok</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
+                    <li><a href="#">Empresa y Soporte</a></li>
+                    <li><a href="#">Ayuda en línea</a></li>
+                    <li><a href="#">Confianza y seguridad</a></li>
+                    <li><a href="#">Atención primaria</a></li>
+                </ul>
+
+                <ul class="redes-sociales">
+                    <h3>Redes Sociales</h3>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Youtube</a></li>
+                    <li><a href="#">TikTok</a></li>
+                </ul>
+            </nav>
+        </div>
+        </div>
         </div>
         <div class="copyright">
             <h3 id="copyright">&copy; 2024 SMC Corporation</h3>
