pagina principal ultimo commit

--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -5,7 +5,7 @@
     <title>Pagina principal</title>
     <link rel="stylesheet" href="css/app.css">
 
-    <meta name="description" content="Mi sitio web" />
+    <meta name="description" content="Primer entregable web" />
     <link rel="icon" type="image/x-icon" href="img/logo.png" />
 
 </head>
@@ -107,30 +107,24 @@
 
 
             <div class="columna3">
-                <h2>Preguntas Frecuentes</h2>
-                <table>
-                    <tr>
-                        <th>Pregunta</th>
-                        <th>Respuesta</th>
-                    </tr>
-                    <tr>
-                        <td>¿Cuáles son sus productos?</td>
-                        <td>Ofrecemos una amplia gama de productos, incluyendo actuadores neumáticos, actuadores
-                            eléctricos, electroválvulas, válvulas neumáticas, sistemas de tratamiento de aire
-                            comprimido, sistemas de control y mucho más.</td>
-                    </tr>
-                    <tr>
-                        <td>¿Dónde están ubicados?</td>
-                        <td>Nuestra sede principal se encuentra en Tokio, Japón. Además, tenemos sucursales y
-                            distribuidores en todo el mundo para brindar soporte a nuestros clientes.</td>
-                    </tr>
-                    <tr>
-                        <td>¿Cómo puedo contactarlos?</td>
-                        <td>Puedes comunicarte con nosotros a través de nuestro formulario de contacto en línea, por
-                            correo electrónico o por teléfono. Visita nuestra página de contacto para obtener más
-                            información.</td>
-                    </tr>
-                </table>
+                <h3 class="titulo_preguntas">Preguntas Frecuentes</h3>
+                <ul class="preguntas">
+                    <li>¿Qué productos ofrecen?</li>
+                    <li>¿Cuál es su área de especialización?</li>
+                    <li>¿Tienen soluciones personalizadas para mi industria?</li>
+                    <li>¿Cómo puedo contactar con ustedes?</li>
+                    <li>¿Ofrecen servicio de instalación y mantenimiento?</li>
+                    <li>¿Cuál es el tiempo de entrega de sus productos?</li>
+                    <li>¿Tienen algún catálogo o folleto que pueda consultar?</li>
+                    <li>¿Cómo puedo realizar un pedido?</strong></li>
+                    <li>¿Tienen alguna garantía para sus productos?</li>
+                    <li>¿Qué métodos de pago aceptan?</li>
+                    <li>¿Ofrecen formación o capacitación sobre el uso de sus productos?</li>
+                    <li>¿Tienen representantes o distribuidores en mi área?</li>
+                    <li>¿Pueden proporcionar referencias de clientes anteriores?</li>
+                    <li>¿Cuál es su política de devolución?</li>
+                    <li>¿Tienen alguna certificación de calidad?</li>
+                </ul>
             </div>
         </div>
     </main>
