pagina formulario y proyectos comienzo

--- a/Proyectos.html
+++ b/Proyectos.html
@@ -61,48 +61,23 @@
 
                 <nav id="barra_navegacion">
                     <ul>
-                        <li class="seleccionado"><a href="pagina_principal.html">Pagina principal</a></li>
-                        <li><a href="proyectos.html">Proyectos</a></li>
+                        <li><a href="pagina_principal.html">Pagina principal</a></li>
+                        <li class="seleccionado"><a href="proyectos.html">Proyectos</a></li>
                         <li><a href="formulario.html">Formulario</a></li>
                     </ul>
                 </nav>
-                <div class="historia">
-
-                    <h1 class="titulo_principal">SMC Corporation</h1>
-
-                    <h2 class="titulo_secundario">Historia de SMC Corporation</h2>
-
-                    <img src="img/SMC.jpg" alt="Imagen 1" class="imagen1">
-
-                    <p>SMC Corporation es una empresa multinacional japonesa que se especializa en la fabricación de
-                        componentes y sistemas neumáticos. Fundada en 1959 en Japón, SMC ha crecido para convertirse en
-                        uno de los principales proveedores mundiales de tecnologías de automatización industrial.</p>
-                    <p>La empresa se dedica a proporcionar soluciones innovadoras y de alta calidad en áreas como la
-                        automatización de fábricas, control de procesos, sistemas de energía limpia y mucho más. Con una
-                        amplia gama de productos, incluyendo actuadores, válvulas, equipos de tratamiento de aire y
-                        sistemas de control, SMC continúa liderando el mercado global de la automatización.</p>
-                    <p>SMC Corporation es una empresa multinacional japonesa que se especializa en la fabricación de
-                        componentes y sistemas neumáticos. Fundada en 1959 en Japón, SMC ha crecido para convertirse en
-                        uno de los principales proveedores mundiales de tecnologías de automatización industrial.</p>
-                    <p>La empresa se dedica a proporcionar soluciones innovadoras y de alta calidad en áreas como la
-                        automatización de fábricas, control de procesos, sistemas de energía limpia y mucho más. Con una
-                        amplia gama de productos, incluyendo actuadores, válvulas, equipos de tratamiento de aire y
-                        sistemas de control, SMC continúa liderando el mercado global de la automatización.</p>
-
-                    <img src="img/SMC2.jpeg" alt="Imagen 2" class="imagen2">
-                    <p>SMC Corporation es una empresa multinacional japonesa que se especializa en la
-                        fabricación de componentes y sistemas neumáticos. Fundada en 1959 en Japón, SMC ha
-                        crecido para convertirse en uno de los principales proveedores mundiales de tecnologías
-                        de automatización industrial.</p>
-                    <p>La empresa se dedica a proporcionar soluciones innovadoras y de alta calidad en áreas
-                        como la automatización de fábricas, control de procesos, sistemas de energía limpia y
-                        mucho más. Con una amplia gama de productos, incluyendo actuadores, válvulas, equipos de
-                        tratamiento de aire y sistemas de control, SMC continúa liderando el mercado global de
-                        la automatización.</p>
-
-
-
+                
+                <div class="tabla-proyectos">
+                    <h1 class="titulo_principal">Proyectos</h1>
                 </div>
+
+
+
+
+
+
+
+
             </div>
 
 
