--- a/Proyectos.html
+++ b/Proyectos.html
@@ -22,7 +22,7 @@
                         <fieldset>
                             <legend>Buscador</legend>
                             <input type="text" name="busqueda" size="30" placeholder="Búsqueda..." />
-                            </fieldset>
+                        </fieldset>
                     </form>
                 </section>
             </nav>
@@ -65,58 +65,60 @@
                         <li><a href="formulario.html">Formulario</a></li>
                     </ul>
                 </nav>
-                
+
                 <div class="tabla-proyectos">
                     <h1 class="titulo_principal">Proyectos</h1>
                 </div>
 
 
-                <h2>Proyectos de Neumática</h2>
+                <h2 id="proyectosNeumaatica">Proyectos de Neumática</h2>
 
                 <table>
-                  <tr>
-                    <th>Título</th>
-                    <th>Descripción</th>
-                    <th>Título</th>
-                    <th>Descripción</th>
-                  </tr>
-                  <tr>
-                    <td><strong>Automatización de Línea de Ensamblaje</strong></td>
-                    <td>Desarrollo e implementación de un sistema de automatización neumática para mejorar la eficiencia en una línea de ensamblaje de productos electrónicos. Este proyecto implica la integración de actuadores neumáticos para el manejo de componentes, así como la instalación de válvulas y sistemas de control para coordinar el flujo de aire en la línea de producción. El objetivo es reducir los tiempos de ciclo y aumentar la precisión en el ensamblaje de los productos.</td>
-                    <td><strong>Sistema de Control de Calidad</strong></td>
-                    <td>Diseño y puesta en marcha de un sistema de control de calidad basado en tecnología neumática para una planta de fabricación de envases plásticos. Este proyecto incluye la instalación de sensores neumáticos para detectar defectos en los envases, así como la integración de actuadores para la clasificación y separación de los productos defectuosos. El objetivo es mejorar la calidad del producto final y reducir el desperdicio en la línea de producción.</td>
-                  </tr>
+                    <tr>
+                        <th>Título</th>
+                        <th>Descripción</th>
+                        <th>Título</th>
+                        <th>Descripción</th>
+                    </tr>
+                    <tr>
+                        <td><strong>Automatización de Línea de Ensamblaje</strong></td>
+                        <td>Desarrollo e implementación de un sistema de automatización neumática para mejorar la
+                            eficiencia en una línea de ensamblaje de productos electrónicos. Este proyecto implica la
+                            integración de actuadores neumáticos para el manejo de componentes, así como la instalación
+                            de válvulas y sistemas de control para coordinar el flujo de aire en la línea de producción.
+                            El objetivo es reducir los tiempos de ciclo y aumentar la precisión en el ensamblaje de los
+                            productos.</td>
+                        <td><strong>Sistema de Control de Calidad</strong></td>
+                        <td>Diseño y puesta en marcha de un sistema de control de calidad basado en tecnología neumática
+                            para una planta de fabricación de envases plásticos. Este proyecto incluye la instalación de
+                            sensores neumáticos para detectar defectos en los envases, así como la integración de
+                            actuadores para la clasificación y separación de los productos defectuosos. El objetivo es
+                            mejorar la calidad del producto final y reducir el desperdicio en la línea de producción.
+                        </td>
+                    </tr>
                 </table>
 
                 <table>
                     <tr>
-                      <th>Encargado</th>
-                      <th>Localidad</th>
-                      <th>Encargado</th>
-                      <th>Localidad</th>
+                        <th>Encargado</th>
+                        <th>Localidad</th>
+                        <th>Encargado</th>
+                        <th>Localidad</th>
                     </tr>
                     <tr>
-                      <td>Antonio Garcia</td>
-                      <td>Cataluña</td>
-                      <td>Sara Gorospe</td>
-                      <td>Galicia</td>
+                        <td>Antonio Garcia</td>
+                        <td>Cataluña</td>
+                        <td>Sara Gorospe</td>
+                        <td>Galicia</td>
                     </tr>
                     <tr>
-                      <td>Jon Tolosa</td>
-                      <td>País Vasco</td>
-                      <td>Pablo Curry</td>
-                      <td>Madrid</td>
+                        <td>Jon Tolosa</td>
+                        <td>País Vasco</td>
+                        <td>Pablo Curry</td>
+                        <td>Madrid</td>
                     </tr>
-                  </table>
-
-
-
-
-
-
-
+                </table>
             </div>
-
 
             <div class="columna3">
                 <h3 class="titulo_preguntas">Preguntas Frecuentes</h3>
